public/css/app.css
/* ... */
.bvn-section #document .card .card-header .btn-header-link::after {
  content: "\F068";
  font-family: "FontAwesome";
  font-weight: 900;
  float: right;
}

.bvn-section #document .card .card-header .btn-header-link.collapsed {
  color: white;
  background: rgba(255, 255, 255, 0.1490196078);
}

.bvn-section #document .card .card-header .btn-header-link.collapsed::after {
  content: "\F067";
}

.bvn-section #document .card .card-header .btn-header-link:focus,
.bvn-section #document .card .card-header .btn-header-link:active {
  outline: none;
  box-shadow: none;
}

.bvn-section #document .card .card-body {
  padding-left: 42px;
  padding-right: 42px;
  font-size: 16px;
  font-family: "DinPro Light", sans-serif;
  line-height: 1.5;
  background-color: rgba(255, 255, 255, 0.062745098);
  margin-top: 2px;
}

.bvn-section #document .card .collapsing {
  background: rgba(255, 255, 255, 0.062745098);
  line-height: 30px;
  color: white;
  font-size: 16px;
  font-family: "DinPro", sans-serif;
}

.bvn-section #document .card .collapse {
  border: 0;
}

.bvn-section #document .card .collapse.show {
  line-height: 30px;
  color: white;
  font-size: 16px;
  font-family: "DinPro", sans-serif;
}

.bvn-section #document .card:first-child .card-header .btn-header-link {
  margin-top: 0;
}

.bvn-section::-webkit-scrollbar {
  width: 10px;
  cursor: pointer;
}

.bvn-section::-webkit-scrollbar-thumb {
  background-color: #003366;
  border-radius: 5px;
  cursor: pointer;
}

.bvn-section::-webkit-scrollbar-track {
  background-color: #0f609c;
}

@media only screen and (max-width: 787.98px) {
  .bvn-section .form-section {
    width: 100%;
    padding-left: 15px;
    padding-right: 15px;
  }

  .bvn-section .form-section .form-group .offices-body .basic-info {
    flex-direction: column;
  }
}

.nin-section {
  width: 100%;
  height: calc(100vh - 120px);
  position: absolute;
  top: 80px;
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow-y: auto;
  z-index: 2;
}

.nin-section .checklists-section-content .checklists-section-body {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: calc(100vh - 120px);
}

.nin-section .main-title {
  font-size: 21px;
  font-family: "DinPro Medium", sans-serif;
  height: 50px;
  min-height: 50px;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

.nin-section .form-section {
  width: 680px;
}

.nin-section .form-section .form-label {
  font-size: 12px;
  margin-left: 28px;
}

.nin-section .form-section .form-group .form-control {
  background: rgba(255, 255, 255, 0.1490196078);
  border: none;
  border-radius: 10rem;
  box-shadow: none;
  height: 44px;
  font-weight: 400;
  outline: medium none;
  padding-left: 40px;
  padding-right: 40px;
  font-size: 16px;
  font-family: "DinPro", sans-serif;
  line-height: 1.4;
  color: white;
  transition: all 0.2s ease-in-out;
}

.nin-section .form-section .form-group .form-control:-webkit-autofill,
.nin-section .form-section .form-group .form-control:-webkit-autofill:hover,
.nin-section .form-section .form-group .form-control:-webkit-autofill:focus {
  caret-color: white;
  -webkit-text-fill-color: white;
  -webkit-box-shadow: 0 0 0px 1000px rgba(33, 44, 88, 0.2509803922) inset;
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
}

.nin-section .form-section .form-group .form-control:hover,
.nin-section .form-section .form-group .form-control:focus {
  box-shadow: none;
}

.nin-section .form-section .form-group .form-control::-webkit-input-placeholder {
  color: white !important;
}

.nin-section .form-section .form-group .form-control::-moz-placeholder {
  color: white !important;
}

.nin-section .form-section .form-group .form-control:-moz-placeholder {
  color: white !important;
}

.nin-section .form-section .form-group .form-control:-ms-input-placeholder {
  color: white !important;
}

.nin-section .form-section .form-group .info-box {
  position: relative;
  width: 100%;
  max-width: 360px;
}

.nin-section .form-section .form-group .info-box .search-field {
  position: relative;
}

.nin-section .form-section .form-group .info-box .search-field .search-icon {
  visibility: visible;
  width: 16px;
  position: absolute;
  top: 14px;
  right: 18px;
}

.nin-section .form-section .form-group .info-box .input-field {
  width: 100%;
  height: 44px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 30px;
  padding-right: 30px;
  background-color: rgba(255, 255, 255, 0.1490196078);
  border-radius: 20px;
  font-size: 16px;
  font-family: "DinPro", sans-serif;
  border: none;
  color: white;
  outline: none;
}

.nin-section .form-section .form-group .info-box .input-field::-moz-placeholder {
  color: white;
}

.nin-section .form-section .form-group .info-box .input-field::placeholder {
  color: white;
}

.nin-section .form-section .form-group .info-box .input-field:hover {
  box-shadow: none;
  border: none;
}

.nin-section .form-section .form-group .info-box .input-field:focus {
  box-shadow: none;
  border: none;
}

.nin-section .form-section .form-group .info-box .field-label {
  color: #003366;
  font-family: "DinPro", sans-serif;
  font-size: 16px;
  text-transform: uppercase;
  margin-left: 20px;
  margin-bottom: 10px;
  margin-top: 32px;
}

.nin-section .form-section .form-group .info-box .offices-menus {
  position: absolute;
  top: 0px;
  width: 100%;
  background-color: #b2c8db;
  padding: 12px;
  border-radius: 8px;
  z-index: 1;
  max-height: 500px;
  overflow-y: auto;
}

.nin-section .form-section .form-group .info-box .offices-menus .office-menu-item {
  display: flex;
  padding: 2px 6px;
  border-radius: 4px;
  cursor: pointer;
  color: #003366;
}

.nin-section .form-section .form-group .info-box .offices-menus .office-menu-item:hover {
  background-color: #003366;
  color: white;
}
/* ... */

